--- a/src/main/webapp/resources/common/css/common.css
+++ b/src/main/webapp/resources/common/css/common.css
@@ -51,3 +51,9 @@ footer {
 		height: auto;
 	}
 }
+.dropdown-menu {
+	padding: 0px;
+}
+.dropdown-menu > .active > a {
+	background-color: #9d9d9d;
+}
